--- a/index.html
+++ b/index.html
@@ -47,9 +47,71 @@
         <div class="headline">
 
           <span>DON'T JUST LOOK, SEE.</span>
-          
+
         </div>
+
       </div>
+
+    </div>
+
+    <div class="container">
+
+      <div class="customer-tabs">
+
+        <div class="customer-tab">
+
+          <img src="./resources/images/paper-icon.png">
+
+          <span>Comprehensive Exams</span>
+
+        </div>
+
+        <div class="customer-tab">
+
+          <img src="./resources/images/ruler-icon.png">
+
+          <span>Custom Fittings</span>
+
+        </div>
+
+        <div class="customer-tab">
+
+          <img src="./resources/images/truck-icon.png">
+
+          <span>Fast Delivery</span>
+
+        </div>
+
+      </div>
+
+      <div class="info">
+
+        <div class="info-tab">
+
+          <h2>Philsophy</h2>
+
+          <h4>Over 75% of our brains are dedicated to one sense: vision. We believe everyone deserves to see the world, not matter what. That’s why we offer eye exams, custom fittings, and quick delivery at a low cost. It’s your vision that makes ours.</h4>
+
+        </div>
+
+        <div class="info-tab">
+
+          <h2>Appointments</h2>
+
+          <h4>Schedule an appointment by calling us at (312) 654-0987. We’re open Tuesday - Saturday, 9AM - 6PM.</h4>
+
+        </div>
+
+      </div>
+
+      <div class="copyright">
+
+        <img src="./resources/images/logo-black.png">
+
+        <span>Copyright Tortoiseshell Optics</span>
+
+      </div>
+
 
     </div>
 
